# filepattern

./: .dockerignore  .ghci  .ghcid  .travis.yml  CHANGES.txt  README.md  filepattern.cabal
src/: FilePattern.hs  Test.hs
src/FilePattern/: Internal.hs  Legacy.hs  Parser.hs
src/System/: FilePattern.hs
src/System/FilePattern/: Core.hs  Internal.hs  Legacy.hs  Parser.hs  Type.hs
src/Test/: FilePattern.hs
src/Test/FilePattern/: Legacy.hs
tests/: Test.hs
tests/Test/: FilePattern.hs
tests/Test/FilePattern/: Legacy.hs
