cabal-version:      >= 1.18
build-type:         Simple
name:               filepattern
version:            0.1
license:            BSD3
license-file:       LICENSE
category:           Development, FilePath
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Evan Rutledge Borden <evan@evan-borden.com>
copyright:          Neil Mitchell 2011-2017
synopsis:           File path glob-like matching
description:
    A library for matching files using patterns such as @src\/**\/*.png@ for all @.png@ files
    recursively under the @src@ directory. Originally taken from the Shake library.
bug-reports:        https://github.com/eborden/filepattern/issues
tested-with:        GHC==8.2.1, GHC==8.0.2, GHC==7.10.3, GHC==7.8.4, GHC==7.6.3, GHC==7.4.2
extra-doc-files:
    CHANGES.txt
    README.md

source-repository head
    type:     git
    location: https://github.com/eborden/filepattern.git

library
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends:
        base == 4.*,
        extra >= 1.5.3,
        filepath
    exposed-modules:
        System.FilePattern
        System.FilePattern.Legacy
    other-modules:
        System.FilePattern.Core
        System.FilePattern.Parser


test-suite filepattern-test
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: src

    build-depends:
        base == 4.*,
        extra,
        filepath,
        QuickCheck >= 2.0
    other-modules:
        Test.FilePattern
        Test.FilePattern.Legacy
